Fix timeline alignment bug among other things

--- a/frontend/src/app.postcss
+++ b/frontend/src/app.postcss
@@ -2,3 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card-show-user {
+    @apply sm:col-start-2 sm:col-start-2 sm:col-span-5 col-span-12;
+}
+
+.card-show-other {
+    @apply sm:col-start-3 sm:col-start-3 sm:col-span-5 col-span-12;
+}
